quorum/test/tests/templating/Pass/PassIntegerTakesInteger_4.quorum
class main
    action main
        Test<integer> something
        something:doSomething(5)
    end
end