quorum/test/tests/templating/Fail/TypeCheckUntemplatedChildOfTempClass_11.quorum
class main
    action main
        B b
        b:setSomething("wow!")
    end
end